load("@io_kubernetes_build//defs:run_in_workspace.bzl", "workspace_binary")

workspace_binary(
    name = "go",
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "update-minor",
    args = [
        "get",
        "-u",
    ],
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "update-patch",
    args = [
        "get",
        "-u=patch",
    ],
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "golint",
    cmd = "@com_github_golang_lint//golint",
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix k8s.io/org
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
)

gazelle(
    name = "gazelle-diff",
    command = "fix",
    external = "vendored",
    mode = "diff",
)

workspace_binary(
    name = "kazel",
    cmd = "@io_kubernetes_build//kazel",
)

workspace_binary(
    name = "kazel-diff",
    args = [
        "--dry-run",
        "--print-diff",
    ],
    cmd = "@io_kubernetes_build//kazel",
)

workspace_binary(
    name = "gofmt",
    cmd = "@go_sdk//:bin/gofmt",
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//admin:all-srcs",
        "//cmd/merge:all-srcs",
        "//config:all-srcs",
        "//vendor:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
