# gazelle:prefix k8s.io/org
# gazelle:proto disable_global

test_suite(
    name = "verify-all",
    tests = [
        "@io_k8s_repo_infra//hack:verify-bazel",
        "@io_k8s_repo_infra//hack:verify-boilerplate",
        "@io_k8s_repo_infra//hack:verify-deps",
        "@io_k8s_repo_infra//hack:verify-gofmt",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//admin:all-srcs",
        "//cmd/merge:all-srcs",
        "//config:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
