PERIBOLOS = "@io_k8s_test_infra//prow/cmd/peribolos"

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    args = [
        "$(location %s)" % PERIBOLOS,
        "--config-path",
        "$(location //config:config.yaml)",
        "--fix-org",
        "--fix-org-members",
        "--required-admins=calebamiles",
        "--required-admins=cblecker",
        "--required-admins=fejta",
        "--required-admins=grodrigues3",
        "--required-admins=idvoretskyi",
        "--required-admins=spiffxp",
    ],
    data = [
        "//config:config.yaml",
        PERIBOLOS,
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
